--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "url": "https://aistudiocdn.com/url@^0.11.4",
     "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "yahoo-finance2": "https://aistudiocdn.com/yahoo-finance2@^3.10.2"
+    "yahoo-finance2": "https://aistudiocdn.com/yahoo-finance2@^3.10.2",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
