--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.32.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "vite": "https://aistudiocdn.com/vite@^7.2.7",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.32.0",
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "url": "https://aistudiocdn.com/url@^0.11.4",
     "path": "https://aistudiocdn.com/path@^0.12.7",
-    "yahoo-finance2": "https://aistudiocdn.com/yahoo-finance2@^3.10.2"
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "yahoo-finance2": "https://aistudiocdn.com/yahoo-finance2@^3.10.2",
+    "vite": "https://aistudiocdn.com/vite@^7.2.7",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
